--- a/Pipfile
+++ b/Pipfile
@@ -15,7 +15,7 @@ lazy-loader = "==0.3"
 moviepy = "==1.0.3"
 networkx = "==3.1"
 numpy = "==1.25.2"
-opencv-python = "==4.8.0.74"
+opencv-python = "*"
 packaging = "==23.1"
 pillow = "==10.0.0"
 proglog = "==0.1.10"
