--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -26,6 +26,8 @@ scipy = "==1.11.1"
 tifffile = "==2023.7.18"
 tqdm = "==4.65.0"
 urllib3 = "==2.0.4"
+fastapi = {version = "*", extras = ["all"]}
+uvicorn = "*"
 
 [dev-packages]
 
